fix contrast current page navbar

--- a/final-project-test/scss/_small.scss
+++ b/final-project-test/scss/_small.scss
@@ -16,7 +16,7 @@ body {
 html {
     font-size: 4vw;
 }
-a.cta h2, a:visited.cta {
+a.cta h2 {
     color: white;
 }
 a, a:visited, a:hover {
